# mart-forge

./: .gitignore  .skill-invocations.jsonl  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  LICENSE  MARKETPLACE.md  METHODOLOGY.md  PLANS.md  QUALITY_SCORE.md  README.md  RELIABILITY.md  SECURITY.md  SPEC.md  pyproject.toml
.claude/: settings.json  worktree_init.sh
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/: 8-control-dqc-audit  commit  creating-duckdb-mart  debug  duckdb-incremental-models  grain-rules-check  land  linear  mart-bootstrap  mart-brd  mart-dqc  mart-review  mart-tdd  pull  (+7 more)
docs/: METHODOLOGY.md  bus-matrix.md  dqc-framework.md  naming-conventions.md  provider-abstraction.md  tech-debt-tracker.md
hooks/: hooks.json
scripts/: confidentiality_scan.py  dqc_update.py  lint_brd.py  lint_docs_freshness.py  lint_layer_direction.py  lint_signed_brd.py  lint_signed_tdd.py  lint_tdd.py  run_all_lints.py  shared.py  sync_local_skills.py  validate_dogfood.py  validate_marketplace.py  validate_spec_appendix.py  validate_templates.py
templates/: business-requirements.template.md  mart.yml.template  tech-design-doc.template.md
tests/: conftest.py  test_confidentiality.py  test_framework_structure.py  test_gme_example.py  test_lint_brd.py  test_lint_docs_freshness.py  test_lint_docs_freshness_main.py  test_lint_layer_direction.py  test_lint_layer_direction_main.py  test_lint_signed.py  test_lint_signed_brd_main.py  test_lint_signed_tdd_main.py  test_lint_tdd.py  test_run_all_lints.py  test_scaffold.py  test_skill_specs.py  test_sync_local_skills.py  test_sync_local_skills_main.py  test_validate_dogfood.py  test_validate_marketplace.py
(+161 files in other folders)
