[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "mart-forge"
version = "3.0.0"
description = "Methodology-first Kimball DWH scaffolding and review framework"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.scripts]
mart-forge = "mart_forge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
