[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mart-forge"
version = "3.0.0rc1"
description = "Methodology-first, agent-executable framework for scaffolding Kimball data warehouses"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

# Runtime deps are minimal -- the framework itself only needs PyYAML
# for the catalog parser. The templates and skills declare their own
# heavier deps when a mart is bootstrapped (dbt, duckdb, streamlit).
dependencies = [
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pyyaml>=6.0",
]

[tool.setuptools]
packages = ["scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
